# proteinfolding

./: .gitignore  README.md  UniProt_PDB_IDs.txt  colored_by_pLDDT.pse  pyproject.toml
proteinfolding/: #__init__.py#  #main.py#  .#__init__.py  .#main.py  __init__.py  main.py  main.py~
